--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.glow {
+  border: 2px solid cyan;
+  box-shadow: 0px 0 15px cyan, 0 0 30px cyan, 0 0 20px cyan, 0 0 20px cyan;
+}
